# viaterm

./: Cargo.toml  README.md  flake.nix
src/: app.rs  event.rs  main.rs
src/definition/: layout_parser.rs  loader.rs  mod.rs  schema.rs
src/keyboard/: backup.rs  connection.rs  keycodes.rs  keymap.rs  lighting.rs  macros.rs  mod.rs
src/ui/: backup_picker.rs  device_selector.rs  key_picker.rs  key_tester.rs  keymap_editor.rs  layout.rs  lighting_editor.rs  macro_editor.rs  mod.rs  status_bar.rs
