[package]
name = "viaterm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Terminal-based VIA keyboard configurator"

[dependencies]
# VIA protocol + USB HID
qmk-via-api = "0.7"

# Terminal UI
ratatui = "0.30"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP for fetching keyboard definitions
ureq = { version = "3", features = ["json"] }

# Local cache directory
directories = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
