[package]
name = "viaterm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Terminal-based VIA keyboard configurator"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Clarity
checked_conversions = "warn"

# Clarity
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"

# Allow these in test code and static tables
too_many_lines = "allow"
similar_names = "allow"
unreadable_literal = "allow"

[[bin]]
name = "via"
path = "src/main.rs"

[dependencies]
# VIA protocol + USB HID
qmk-via-api = "0.7"

# Terminal UI
ratatui = "0.30"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP for fetching keyboard definitions
ureq = { version = "3", features = ["json"] }

# Local cache directory
directories = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
